syntax = "proto3";

option csharp_namespace = "AuthService";

package greet;

service AuthService {
  rpc CreateTokens (CreateTokensRequest) returns (CreateTokensResponse);
  rpc Verify (VerifyRequest) returns (VerifyResponse);
}

message CreateTokensRequest{
	int32 user_id = 1;
}

message CreateTokensResponse{
	string access_token = 1;
	string refresh_token = 2;
}

message VerifyRequest{
	string refresh_token = 1;
}

message VerifyResponse{
	bool is_valid = 1;
	int32 user_id = 2;
	string access_token = 3;
	string refresh_token = 4;
}


